Update Dr Chakraborty to Dr Debojyoti Chakraborty Sir in progress.html

--- a/pages/progress.html
+++ b/pages/progress.html
@@ -80,7 +80,7 @@
                 </div>
                 
                 <div class="note">
-                    <p><strong>For Dr. Chakraborty:</strong> When you submit feedback, an email will be prepared to send to Vishal. Please complete sending the email that opens after clicking "Save Feedback".</p>
+                    <p><strong>For Dr. Debojyoti Chakraborty Sir:</strong> When you submit feedback, an email will be prepared to send to Vishal. Please complete sending the email that opens after clicking "Save Feedback".</p>
                 </div>
 
                 <div class="pi-feedback-section">
@@ -90,7 +90,7 @@
                             <!-- Previous feedback will be loaded here -->
                         </div>
                         <div class="new-feedback-input">
-                            <textarea id="pi-feedback-genexp" placeholder="Dr. Chakraborty: Add your feedback or comments here..." class="pi-feedback-textarea"></textarea>
+                            <textarea id="pi-feedback-genexp" placeholder="Dr. Debojyoti Chakraborty Sir: Add your feedback or comments here..." class="pi-feedback-textarea"></textarea>
                             <div class="feedback-actions">
                                 <select id="pi-feedback-status-genexp" class="pi-status-select">
                                     <option value="approved">Approve Direction</option>
@@ -182,7 +182,7 @@
                 </div>
                 
                 <div class="note">
-                    <p><strong>For Dr. Chakraborty:</strong> When you submit feedback, an email will be prepared to send to Vishal. Please complete sending the email that opens after clicking "Save Feedback".</p>
+                    <p><strong>For Dr. Debojyoti Chakraborty Sir:</strong> When you submit feedback, an email will be prepared to send to Vishal. Please complete sending the email that opens after clicking "Save Feedback".</p>
                 </div>
                 <div class="pi-feedback-section">
                     <h4><i class="fas fa-comments"></i> PI Feedback:</h4>
@@ -191,7 +191,7 @@
                             <!-- Previous feedback will be loaded here -->
                         </div>
                         <div class="new-feedback-input">
-                            <textarea id="pi-feedback-stickforstats" placeholder="Dr. Chakraborty: Add your feedback or comments here..." class="pi-feedback-textarea"></textarea>
+                            <textarea id="pi-feedback-stickforstats" placeholder="Dr. Debojyoti Chakraborty Sir: Add your feedback or comments here..." class="pi-feedback-textarea"></textarea>
                             <div class="feedback-actions">
                                 <select id="pi-feedback-status-stickforstats" class="pi-status-select">
                                     <option value="approved">Approve Direction</option>
