Add direct email feedback button to progress page

--- a/pages/progress.html
+++ b/pages/progress.html
@@ -98,6 +98,11 @@
                                     <option value="question">Ask Question</option>
                                 </select>
                                 <button class="save-feedback-btn" data-project="genexp"><i class="fas fa-save"></i> Save Feedback</button>
+                                <a href="mailto:vishalvikashbharti@gmail.com?subject=Feedback on Weekly Progress&body=Please include your feedback here" 
+                                    style="display: inline-block; background-color: #3498db; color: white; margin-left: 10px; padding: 8px 16px; 
+                                    border-radius: 5px; text-decoration: none;">
+                                    <i class="fas fa-envelope"></i> Email Feedback
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -199,6 +204,11 @@
                                     <option value="question">Ask Question</option>
                                 </select>
                                 <button class="save-feedback-btn" data-project="stickforstats"><i class="fas fa-save"></i> Save Feedback</button>
+                                <a href="mailto:vishalvikashbharti@gmail.com?subject=Feedback on Weekly Progress&body=Please include your feedback here" 
+                                    style="display: inline-block; background-color: #3498db; color: white; margin-left: 10px; padding: 8px 16px; 
+                                    border-radius: 5px; text-decoration: none;">
+                                    <i class="fas fa-envelope"></i> Email Feedback
+                                </a>
                             </div>
                         </div>
                     </div>
