♻️  promote Colossal redesign to root; archive old site -> /legacy

--- a/legacy/pages/home.html
+++ b/legacy/pages/home.html
@@ -247,6 +247,26 @@
                 </div>
             </div>
         </div>
+
+        <div class="project-card">
+            <div class="project-img">
+                <i class="fas fa-chart-area"></i>
+            </div>
+            <div class="project-info">
+                <h3>Confidence Intervals Explorer</h3>
+                <p>Educational tool for understanding statistical confidence intervals through interactive visualizations and simulations.</p>
+                <div class="project-tags">
+                    <span class="project-tag">Python</span>
+                    <span class="project-tag">Streamlit</span>
+                    <span class="project-tag">Statistics</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://visvikbharti-confidence-intervals-explorer.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
+                    <a href="https://github.com/visvikbharti/" target="_blank"><i class="fab fa-github"></i> Code</a>
+                </div>
+            </div>
+        </div>
+
         <div class="project-card">
             <div class="project-img">
                 <i class="fas fa-dna"></i>
