--- a/legacy/pages/projects.html
+++ b/legacy/pages/projects.html
@@ -89,6 +89,28 @@
 <div class="section">
     <h2>Software & Tools</h2>
     <div class="projects-grid">
+
+        <div class="project-card">
+            <div class="project-img">
+                <i class="fas fa-chart-area"></i>
+            </div>
+            <div class="project-info">
+                <h3>Confidence Intervals Explorer</h3>
+                <p>Interactive educational application for understanding confidence intervals through visualizations, simulations, and practical applications.</p>
+                <div class="project-tags">
+                    <span class="project-tag">Python</span>
+                    <span class="project-tag">Streamlit</span>
+                    <span class="project-tag">Statistics</span>
+                    <span class="project-tag">Tool</span>
+                    <span class="project-tag">Education</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://visvikbharti-confidence-intervals-explorer.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
+                    <a href="https://github.com/visvikbharti/" target="_blank"><i class="fab fa-github"></i> Code</a>
+                </div>
+            </div>
+        </div>
+
         <div class="project-card">
             <div class="project-img">
                 <i class="fas fa-chart-bar"></i>
