--- a/legacy/pages/stickforstats.html
+++ b/legacy/pages/stickforstats.html
@@ -14,6 +14,9 @@
             <a href="https://visvikbharti-probability-distributions-tool.streamlit.app/" target="_blank" class="cta-button">
                 <i class="fas fa-external-link-alt"></i> Try Probability Module
             </a>
+            <a href="https://visvikbharti-confidence-intervals-explorer.streamlit.app/" target="_blank" class="cta-button">
+                <i class="fas fa-external-link-alt"></i> Try Confidence Intervals Explorer
+            </a>
             <a href="https://github.com/visvikbharti/" target="_blank" class="cta-button cta-secondary">
                 <i class="fab fa-github"></i> GitHub Repository
             </a>
@@ -42,7 +45,11 @@
             <h3>Intelligent Test Selection</h3>
             <p>Automatically analyzes your data's characteristics and research questions to recommend the most appropriate statistical tests, eliminating confusion about which test to use.</p>
         </div>
-        
+        <div class="feature-card">
+            <i class="fas fa-university"></i>
+            <h3>Educational Resources</h3>
+            <p>Comprehensive learning tools like the Confidence Intervals Explorer that provide deep understanding of statistical concepts through interactive visualizations and simulations.</p>
+        </div>
         <div class="feature-card">
             <i class="fas fa-flask"></i>
             <h3>Experimental Design Assistant</h3>
@@ -82,7 +89,27 @@
             <button class="module-tab active" data-module="exploration">Data Exploration</button>
             <button class="module-tab" data-module="hypothesis">Hypothesis Testing</button>
             <button class="module-tab" data-module="biological">Biological Analyses</button>
+            <button class="module-tab" data-module="education">Educational Tools</button>
         </div>
+
+        <div class="module-panel" data-module="education">
+            <h3>Educational Tools</h3>
+            <ul>
+                <li><strong>Confidence Intervals Explorer:</strong> Comprehensive tool for understanding interval estimation through visualizations and simulations</li>
+                <li><strong>Statistical Concept Visualizations:</strong> Interactive demonstrations of key statistical principles</li>
+                <li><strong>Method Comparison Tools:</strong> Side-by-side comparisons of different statistical approaches</li>
+                <li><strong>Interactive Tutorials:</strong> Guided learning paths for statistical concepts</li>
+                <li><strong>Mathematical Derivations:</strong> Step-by-step explanations with visualizations of statistical formulas</li>
+            </ul>
+            <div class="module-screenshot">
+                <img src="/api/placeholder/400/250" alt="Confidence Intervals Explorer Screenshot" class="module-img">
+                <div class="module-caption">
+                    <p>The Confidence Intervals Explorer provides intuitive understanding of statistical inference concepts.</p>
+                    <a href="https://visvikbharti-confidence-intervals-explorer.streamlit.app/" target="_blank" class="module-link">Try Confidence Intervals Explorer</a>
+                </div>
+            </div>
+        </div>
+
         <div class="module-content">
             <div class="module-panel active" data-module="exploration">
                 <h3>Data Exploration & Visualization</h3>
@@ -187,6 +214,32 @@
                 </ul>
                 <a href="https://visvikbharti-probability-distributions-tool.streamlit.app/" target="_blank" class="cta-button">
                     <i class="fas fa-external-link-alt"></i> Try Probability Module Demo
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="section">
+    <h2>Demo: Confidence Intervals Explorer</h2>
+    <div class="demo-section">
+        <div class="demo-grid">
+            <div class="demo-image">
+                <img src="/api/placeholder/450/300" alt="StickForStats Confidence Intervals Explorer Screenshot">
+                <p class="demo-caption">The Confidence Intervals Explorer providing interactive visualizations and simulations</p>
+            </div>
+            
+            <div class="demo-description">
+                <p>The Confidence Intervals Explorer helps users:</p>
+                <ul>
+                    <li>Understand the theoretical foundations of confidence intervals</li>
+                    <li>Explore interactive simulations with adjustable parameters</li>
+                    <li>Visualize how sample size affects interval precision</li>
+                    <li>Compare frequentist and Bayesian approaches</li>
+                    <li>Apply confidence intervals to real-world scenarios</li>
+                </ul>
+                <a href="https://visvikbharti-confidence-intervals-explorer.streamlit.app/" target="_blank" class="cta-button">
+                    <i class="fas fa-external-link-alt"></i> Try Confidence Intervals Explorer
                 </a>
             </div>
         </div>
