Updated Weekly Report with correction in Image name

--- a/legacy/pages/progress.html
+++ b/legacy/pages/progress.html
@@ -462,7 +462,7 @@
         
         <div class="sidebar">
             <!-- Illustration -->
-            <img src="../img/progress-tracker-illustration.jpg" class="sidebar-image" alt="Research Progress Tracker" style="width: 650px; height: auto;">
+            <img src="/legacy/img/progress-tracker-illustration.jpg" class="sidebar-image" alt="Research Progress Tracker" style="width: 650px; height: auto;">
             
             <!-- Development Plan -->
             <div class="project-section">
