--- a/legacy/pages/progress.html
+++ b/legacy/pages/progress.html
@@ -1,5 +1,9 @@
 <!-- Weekly Progress Tracker Page with Improved Navigation -->
 <!-- Simple password protection -->
+<!-- Cache busting meta tag -->
+<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="pragma" content="no-cache" />
 <script>
   // Only show content if authenticated
   document.addEventListener('DOMContentLoaded', function() {
@@ -529,7 +533,7 @@
     
     <div class="sidebar">
       <!-- Illustration -->
-      <img src="../img/progress-tracker-illustration.jpg" class="sidebar-image" alt="Research Progress Tracker" style="width: 100%; height: auto; max-width: 650px;">
+      <img src="https://visvikbharti.github.io/legacy/img/progress-tracker-illustration.jpg?v=2" class="sidebar-image" alt="Research Progress Tracker" style="width: 100%; height: auto; max-width: 650px;">
       
       <!-- Development Plan -->
       <div class="project-section">
