--- a/legacy/pages/progress.html
+++ b/legacy/pages/progress.html
@@ -45,7 +45,7 @@
   // Password handling
   function checkPassword() {
     const password = document.getElementById('progress-password').value;
-    const correctPassword = "IGIB-CSIR-2025";
+    const correctPassword = "report_vishal";
     
     if (password === correctPassword) {
       // Set authentication in session storage
