Fix image size and proportions in progress page

--- a/legacy/pages/progress.html
+++ b/legacy/pages/progress.html
@@ -736,8 +736,8 @@
     </div>
     
     <div class="sidebar">
-      <!-- Static illustration with no dynamic loading -->
-      <img src="../img/progress-tracker-illustration.jpg" class="sidebar-image" alt="StickForStats Platform Development">
+      <!-- Static illustration with controlled size -->
+      <img src="../img/progress-tracker-illustration.jpg" class="sidebar-image" alt="StickForStats Platform Development" style="max-width: 100%; height: auto; max-height: 250px; object-fit: contain; display: block; margin: 0 auto 20px auto;">
       
       <!-- Development Plan -->
       <div class="project-section">
