Fix misleading course dates to show accurate enrollment/completion timeline

--- a/legacy/pages/progress.html
+++ b/legacy/pages/progress.html
@@ -535,30 +535,30 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>May 6-7</td>
-                        <td>Core Research Integrity Principles</td>
+                        <td>May 10</td>
+                        <td>Course Enrollment</td>
+                        <td>
+                            <p>Enrolled in the Epigeum Research Integrity, Second Edition course.</p>
+                            <p>Started the learning modules across multiple course sections.</p>
+                            <p>Set up schedule to complete all required training components.</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>May 10-12</td>
+                        <td>Course Progression</td>
                         <td>
                             <p>Completed modules on research design, methodology, and ethical considerations.</p>
-                            <p>Studied frameworks for addressing research misconduct and questionable practices.</p>
-                            <p>Reviewed case studies on research integrity violations and their consequences.</p>
+                            <p>Studied frameworks for data management, publication ethics, and conflicts of interest.</p>
+                            <p>Worked through modules on responsible collaboration in research teams.</p>
                         </td>
                     </tr>
                     <tr>
-                        <td>May 8-9</td>
-                        <td>Data Management & Publication</td>
+                        <td>May 13</td>
+                        <td>Course Completion</td>
                         <td>
-                            <p>Completed modules on data collection, storage, and management best practices.</p>
-                            <p>Studied ethical considerations in scientific publication and authorship.</p>
-                            <p>Reviewed procedures for handling conflicts of interest in research.</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>May 10-13</td>
-                        <td>Collaborative Research Ethics</td>
-                        <td>
-                            <p>Completed modules on responsible collaboration in research teams.</p>
-                            <p>Studied international standards for research integrity across disciplines.</p>
-                            <p>Obtained certification on May 13, 2025 confirming course completion and competency.</p>
+                            <p>Finished all remaining course modules and final assessments.</p>
+                            <p>Received all three official certificates (Program, Core, and Advanced).</p>
+                            <p>All certificates issued on May 13, 2025 confirming successful course completion.</p>
                         </td>
                     </tr>
                 </tbody>
