Fix navigation scrolling issue with GSAP ScrollToPlugin
- Added ScrollToPlugin to handle smooth scrolling with pinned sections
- Updated smooth scroll implementation to use GSAP's scrollTo
- Registered ScrollToPlugin in main.js

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <!-- GSAP + ScrollTrigger -->
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollToPlugin.min.js"></script>
 
   <!-- Portfolio logic -->
   <script defer src="js/main.js"></script>
