Add comprehensive projects overview page
- Created projects.html with all research projects, tools, and ML projects
- Added filtering functionality for project categories
- Created professional project cards with icons and tags
- Added previous projects and ongoing development sections
- Created projects.css with modern styling
- Updated navigation to link to projects page
- Added 'View All Projects' button in homepage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <ul class="nav-links">
       <li><a href="#hero">Home</a></li>
       <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
+      <li><a href="pages/projects.html">Projects</a></li>
       <li><a href="#research">Research</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="legacy/pages/progress.html" class="nav-highlight">Weekly Progress</a></li>
@@ -209,6 +209,11 @@
         </p>
         <a class="btn" href="pages/rna-lab-navigator.html">View Project</a>
       </div>
+    </div>
+
+    <!-- View All Projects CTA -->
+    <div class="center mt-3">
+      <a href="pages/projects.html" class="btn big">View All Projects</a>
     </div>
   </section>
 
